# GNUDO-cpp-ui-qt

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  gnudo-ui-qt.pro  install-alpha.sh  install-latest-release.sh  install-this.sh  install.sh
gnudo-cpp-ui-qt/: delete_priority_dialog.cpp  delete_priority_dialog.hpp  deleteprioritydialog.cpp  deleteprioritydialog.hpp  edit_priority_dialog.cpp  edit_priority_dialog.hpp  editprioritydialog.cpp  editprioritydialog.hpp  gnudo-cpp-ui-qt.pro  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  priority_levels_dialog.cpp  priority_levels_dialog.hpp  prioritylevelsdialog.cpp  prioritylevelsdialog.hpp  task_info_dialog.cpp  task_info_dialog.hpp  taskinfodialog.cpp  taskinfodialog.h  taskinfodialog.ui
lib/: CMakeLists.txt
src/: CMakeLists.txt  delete_priority_dialog.cpp  delete_priority_dialog.hpp  delete_priority_dialog.ui  edit_priority_dialog.cpp  edit_priority_dialog.hpp  main_window.cpp  main_window.hpp  main_window.ui  priority_levels_dialog.cpp  priority_levels_dialog.hpp  priority_levels_dialog.ui  src.pro  task_info_dialog.cpp  task_info_dialog.hpp
src/gnudo-ui-qt/: delete_priority_dialog.cpp  delete_priority_dialog.hpp  edit_priority_dialog.cpp  edit_priority_dialog.hpp  edit_priority_dialog.ui  gnudo-ui-qt.pro  main.cpp  main_window.cpp  main_window.hpp  priority_levels_dialog.cpp  priority_levels_dialog.hpp  task_info_dialog.cpp  task_info_dialog.hpp  task_info_dialog.ui
